--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -46,6 +46,6 @@ email: tayloreigenfisher@gmail.com # your email address
 # youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 # zotero_username: # your zotero username
 custom_social: # can be any name here other than the ones already defined above
-  #logo: https://www.alberteinstein.com/wp-content/uploads/2024/03/cropped-favicon-192x192.png # can be png, svg, jpg
+  logo: /assets/img/ko-fi-icon.png # use a relative path from the site root
   title: ko-fi
   url: https://ko-fi.com/smashmath
