--- a/_config.yml
+++ b/_config.yml
@@ -87,9 +87,9 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: eigentaylor # blog_name will be displayed in your blog page
+blog_name: my math stuff # blog_name will be displayed in your blog page
 blog_description: i wrote these
-permalink: /blog/:year/:title/
+permalink: /blog/:title/
 lsi: false # produce an index for related posts
 
 # Pagination
