--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -48,4 +48,4 @@ email: tayloreigenfisher@gmail.com # your email address
 custom_social: # can be any name here other than the ones already defined above
   logo: https://raw.githubusercontent.com/eigentaylor/eigentaylor.github.io/refs/heads/main/assets/img/ko-fi-icon.png
   title: ko-fi
-  url: https://ko-fi.com/smashmath
+  url: https://ko-fi.com/eigentaylor
